# sample-doc

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
doc/: conf.py  index.rst
doc/another-component/: index.rst  ipsum.rst  lorem.rst
doc/some-component/: index.rst
